--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- https://raw.githubusercontent.com/ei-pc10/20241018_bunka_models/main/%E5%B7%A5%E4%BD%9C%E5%AE%A4.glb 縦-->
         <!-- https://raw.githubusercontent.com/ei-pc10/20241018_bunka_models/main/%E5%B7%A5%E4%BD%9C%E5%AE%A4%E6%A8%AA.glb 横-->
         
-        <a-asset-item id="workspace_glb_tate" src="https://raw.githubusercontent.com/ei-pc10/20241018_bunka_models/main/%E5%B7%A5%E4%BD%9C%E5%AE%A4.glb"></a-asset-item>
+        <a-asset-item id="workspace_glb_tate" src="https://drive.google.com/file/d/1F5ftint2ZbepOnXl74naiuJeR_mh4r1I/view?usp=drive_link"></a-asset-item>
         <a-asset-item id="workspace_glb_yoko" src="https://raw.githubusercontent.com/ei-pc10/20241018_bunka_models/main/%E5%B7%A5%E4%BD%9C%E5%AE%A4%E6%A8%AA.glb"></a-asset-item>
     </a-assets>
 
