--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
 <a-scene embedded arjs="debugUIEnabled:false; trackingMethod:best;" vr-mode-ui="enabled: false">
     <!-- オブジェクトファイルとマテリアルファイルを読み込む -->
     <a-assets>
-        <a-asset-item id="workspace_glb_tate" src="https://drive.google.com/uc?export=download&id=1F5ftint2ZbepOnXl74naiuJeR_mh4r1I"></a-asset-item>
+        <!-- 縦のGLBファイル -->
+        <a-asset-item id="workspace_glb_tate" src="https://raw.githubusercontent.com/ei-pc10/20241018_bunka_models/main/%E3%83%81%E3%83%93%E3%82%AD%E3%83%A3%E3%83%A9%E3%82%B4%E3%83%9E%E9%A5%85%E9%A0%ADv3%E3%82%88%E3%82%8D%E3%81%93%E3%81%B3%E3%83%9C%E3%83%BC%E3%83%B3.glb"></a-asset-item>
+        <!-- 横のGLBファイル -->
+        <a-asset-item id="workspace_glb_yoko" src="https://raw.githubusercontent.com/ei-pc10/20241018_bunka_models/main/%E5%B7%A5%E4%BD%9C%E5%AE%A4%E6%A8%AA.glb"></a-asset-item>
     </a-assets>
 
     <!-- こっからARの世界。マーカー上になにを展開するかを書く -->
     <!-- マーカー hiro にモデルを表示 -->
     <a-marker preset="hiro">
         <a-gltf-model src="#workspace_glb_tate" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-gltf-model>
+    </a-marker>
+
+    <!-- マーカー animation.patt にモデルを表示 -->
+    <a-marker type="pattern" url="photo/animation.patt">
+        <a-gltf-model src="#workspace_glb_yoko" position="0 0 3.5" scale="0.3 0.3 0.3" rotation="0 0 0"
+            animation="property: rotation;
+             from: -135 0 0;
+             to: -135 0 360;
+             dur: 7000;
+             loop: true;
+             easing: linear"></a-gltf-model>
     </a-marker>
 
     <!-- ARのカメラ -->
